fix unaligned layout in bit BlazorUI demo #5502

--- a/src/BlazorUI/Demo/Client/Core/Shared/Footer.razor.scss
+++ b/src/BlazorUI/Demo/Client/Core/Shared/Footer.razor.scss
@@ -17,15 +17,15 @@ section {
     position: relative;
     max-width: rem2(1200px);
     box-sizing: border-box;
-    padding: rem2(40px) rem2(20px) rem2(80px);
+    padding: rem2(100px) rem2(20px);
 
     &:first-child {
         display: grid;
+        gap: rem2(40px);
+        align-items: center;
         grid-auto-columns: 1fr;
         grid-template-columns: 1fr 1fr;
-        align-items: center;
         justify-content: space-between;
-        gap: rem2(40px);
         grid-template-rows: auto;
 
         @include lg {
